--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <header>
     <div class="navbar">
         <div class="nav-logo border">
-            <a href="http://www.amazon.com"><img src="C:\Users\ssdig\Desktop\Project_Images\amazon_logo.png" class="logo"></a>
+            <a href="http://www.amazon.com"><img src="amazon_logo.png" class="logo"></a>
         </div>
         <div class="nav-address border">
             <p class="address-first">Deliver to</p>
@@ -164,7 +164,7 @@
         </div>
 
         <div class="foot-panel3">
-            <a href="http://www.amazon.com"><img src="C:\Users\ssdig\Desktop\Project_Images\amazon_logo.png" class="logo"></a>
+            <a href="http://www.amazon.com"><img src="amazon_logo.png" class="logo"></a>
 
             </div>
         </div>
